// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async action with any type fetchUsersAsync.cancel (type) should match snapshot 1`] = `"Property 'cancel' does not exist on type '{ request: ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", any, undefined>; success: ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", any[], undefined>; failure: ActionCreatorBuilder<...>; }'."`;

exports[`async action with any type fetchUsersAsync.failure(
      1
    ) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_FAILURE\\", any>"`;

exports[`async action with any type fetchUsersAsync.request(
      1
    ) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_REQUEST\\", any>"`;

exports[`async action with any type fetchUsersAsync.success([
      1,
    ]) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_SUCCESS\\", any[]>"`;

exports[`async action with any type fn(fetchUsersAsync) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", any, any>; success: TH.ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", any[], never>; failure: TH.ActionCreatorBuilder<\\"FETCH_USERS_FAILURE\\", any, any>; }"`;

exports[`async action with cancel fetchUsersAsync.cancel(
      'reason'
    ) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_CANCEL\\", string>"`;

exports[`async action with cancel fetchUsersAsync.failure(
      Error('reason')
    ) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_FAILURE\\", Error>"`;

exports[`async action with cancel fetchUsersAsync.request() (type) should match snapshot 1`] = `"TH.EmptyAction<\\"FETCH_USERS_REQUEST\\">"`;

exports[`async action with cancel fetchUsersAsync.success([
      { firstName: 'Piotr', lastName: 'Witek' },
    ]) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_SUCCESS\\", User[]>"`;

exports[`async action with cancel fn(fetchUsersAsync) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", undefined, never>; success: TH.ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", User[], never>; failure: TH.ActionCreatorBuilder<\\"FETCH_USERS_FAILURE\\", Error, never>; cancel: TH.ActionCreatorBuilder<\\"FETCH_USERS_CANCEL\\", string, never>; }"`;

exports[`async action with mappers fetchUserMappers.cancel (type) should match snapshot 1`] = `"Property 'cancel' does not exist on type '{ request: ActionCreatorBuilder<\\"FETCH_USER_REQUEST\\", undefined, undefined>; success: ((__0: User) => PayloadAction<\\"FETCH_USER_SUCCESS\\", string>) & ActionCreatorTypeMetadata<...>; failure: ((error: Error, meta: number) => PayloadMetaAction<...>) & ActionCreatorTypeMetadata<...>; }'."`;

exports[`async action with mappers fetchUserMappers.failure(
      Error('reason'),
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USER_FAILURE\\", Error, number>"`;

exports[`async action with mappers fetchUserMappers.request() (type) should match snapshot 1`] = `"TH.EmptyAction<\\"FETCH_USER_REQUEST\\">"`;

exports[`async action with mappers fetchUserMappers.success({
      firstName: 'Piotr',
      lastName: 'Witek',
    }) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USER_SUCCESS\\", string>"`;

exports[`async action with mappers fn(fetchUserMappers) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USER_REQUEST\\", undefined, never>; success: ((args_0: User) => TH.PayloadAction<\\"FETCH_USER_SUCCESS\\", string>) & TH.ActionCreatorTypeMetadata<\\"FETCH_USER_SUCCESS\\", TH.PayloadAction<\\"FETCH_USER_SUCCESS\\", string>>; failure: ((args_0: Error, args_1: number) => TH.PayloadMetaAction<\\"FETCH_USER_FAILURE\\", Error, number>) & TH.ActionCreatorTypeMetadata<\\"FETCH_USER_FAILURE\\", TH.PayloadMetaAction<\\"FETCH_USER_FAILURE\\", Error, number>>; }"`;

exports[`async action with mappers with cancel fetchUserMappers.cancel(
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USER_CANCEL\\", undefined, number>"`;

exports[`async action with mappers with cancel fetchUserMappers.failure(
      Error('reason'),
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USER_FAILURE\\", Error, number>"`;

exports[`async action with mappers with cancel fetchUserMappers.request() (type) should match snapshot 1`] = `"TH.EmptyAction<\\"FETCH_USER_REQUEST\\">"`;

exports[`async action with mappers with cancel fetchUserMappers.success({
      firstName: 'Piotr',
      lastName: 'Witek',
    }) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USER_SUCCESS\\", string>"`;

exports[`async action with mappers with cancel fn(fetchUserMappers) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USER_REQUEST\\", undefined, never>; success: ((args_0: User) => TH.PayloadAction<\\"FETCH_USER_SUCCESS\\", string>) & TH.ActionCreatorTypeMetadata<\\"FETCH_USER_SUCCESS\\", TH.PayloadAction<\\"FETCH_USER_SUCCESS\\", string>>; failure: ((args_0: Error, args_1: number) => TH.PayloadMetaAction<\\"FETCH_USER_FAILURE\\", Error, number>) & TH.ActionCreatorTypeMetadata<\\"FETCH_USER_FAILURE\\", TH.PayloadMetaAction<\\"FETCH_USER_FAILURE\\", Error, number>>; cancel: ((args_0: number) => TH.PayloadMetaAction<\\"FETCH_USER_CANCEL\\", undefined, number>) & TH.ActionCreatorTypeMetadata<\\"FETCH_USER_CANCEL\\", TH.PayloadMetaAction<\\"FETCH_USER_CANCEL\\", undefined, number>>; }"`;

exports[`async action with meta fetchUsersAsync.cancel (type) should match snapshot 1`] = `"Property 'cancel' does not exist on type '{ request: ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", undefined, number>; success: ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", User[], undefined>; failure: ActionCreatorBuilder<...>; }'."`;

exports[`async action with meta fetchUsersAsync.failure(
      Error('reason'),
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USERS_FAILURE\\", Error, number>"`;

exports[`async action with meta fetchUsersAsync.request(
      undefined,
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USERS_REQUEST\\", undefined, number>"`;

exports[`async action with meta fetchUsersAsync.success([
      { firstName: 'Piotr', lastName: 'Witek' },
    ]) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_SUCCESS\\", User[]>"`;

exports[`async action with meta fn(fetchUsersAsync) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", undefined, number>; success: TH.ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", User[], never>; failure: TH.ActionCreatorBuilder<\\"FETCH_USERS_FAILURE\\", Error, number>; }"`;

exports[`async action with meta with cancel fetchUsersAsync.cancel(
      'reason'
    ) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_CANCEL\\", string>"`;

exports[`async action with meta with cancel fetchUsersAsync.failure(
      Error('reason'),
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USERS_FAILURE\\", Error, number>"`;

exports[`async action with meta with cancel fetchUsersAsync.request(
      undefined,
      111
    ) (type) should match snapshot 1`] = `"TH.PayloadMetaAction<\\"FETCH_USERS_REQUEST\\", undefined, number>"`;

exports[`async action with meta with cancel fetchUsersAsync.success([
      { firstName: 'Piotr', lastName: 'Witek' },
    ]) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_SUCCESS\\", User[]>"`;

exports[`async action with meta with cancel fn(fetchUsersAsync) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", undefined, number>; success: TH.ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", User[], never>; failure: TH.ActionCreatorBuilder<\\"FETCH_USERS_FAILURE\\", Error, number>; cancel: TH.ActionCreatorBuilder<\\"FETCH_USERS_CANCEL\\", string, never>; }"`;

exports[`async action without cancel action.payload (type) should match snapshot 1`] = `"User[]"`;

exports[`async action without cancel fetchUsersAsync.cancel (type) should match snapshot 1`] = `"Property 'cancel' does not exist on type '{ request: ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", undefined, undefined>; success: ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", User[], undefined>; failure: ActionCreatorBuilder<...>; }'."`;

exports[`async action without cancel fetchUsersAsync.failure(
      Error('reason')
    ) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_FAILURE\\", Error>"`;

exports[`async action without cancel fetchUsersAsync.request() (type) should match snapshot 1`] = `"TH.EmptyAction<\\"FETCH_USERS_REQUEST\\">"`;

exports[`async action without cancel fetchUsersAsync.success([
      { firstName: 'Piotr', lastName: 'Witek' },
    ]) (type) should match snapshot 1`] = `"TH.PayloadAction<\\"FETCH_USERS_SUCCESS\\", User[]>"`;

exports[`async action without cancel fetchUsersAsync.success.match(action) (type) should match snapshot 1`] = `"boolean"`;

exports[`async action without cancel fetchUsersAsync.success.type (type) should match snapshot 1`] = `"\\"FETCH_USERS_SUCCESS\\""`;

exports[`async action without cancel fn(fetchUsersAsync) (type) should match snapshot 1`] = `"{ request: TH.ActionCreatorBuilder<\\"FETCH_USERS_REQUEST\\", undefined, never>; success: TH.ActionCreatorBuilder<\\"FETCH_USERS_SUCCESS\\", User[], never>; failure: TH.ActionCreatorBuilder<\\"FETCH_USERS_FAILURE\\", Error, never>; }"`;
